version 1.9.6, in progress
- cum() function: make this respect panel structure
- ranking() function: accept vectors as well as series
- New function, hdprod(): implements "direct row product" for matrices
- New functions for series: skewness() and kurtosis()
- allow non-integer degrees of freedom for Student's t in cdf(), invcdf()
  and randgen()
- extend the invcdf() function to the Gamma and std. GED distributions
- GUI script editor: add Cut and Redo toolbar buttons
- GUI session Notes: add option to pop up the notes on opening a
  session file
- build with SSE2 enabled: ensure that the C compiler SSE2 option is
  not wiped out if the user (re-)specifies CFLAGS when doing "make"
- Defining lists: document the wildcard operator, *, and add an
  ellipsis operator (two dots).
- VARs: (re-)enable HAC standard errors via a new option, --robust-hac
- "var" command with --lagselect option: make the table of information
  criteria available as $test
- "omit" command: add a --test-only option to prevent the reduced model 
  from being saved as "last model"
- "add" command: add an --lm option to do an LM test, in which case the
  last model is not replaced by the augmented version
- "makepkg" command: add options to produce an XML index entry and a
  file of translatable strings suitable for use with gettext
- Add facility for inspecting the list of gretl addons, under the GUI
  Help menu
- Download of textbook data-file packages: use sourceforge for better
  reliability
- Graphing ("gnuplot" command and GUI): generalize the option of
  separation using a binary dummy to allow use of discrete variables
- "boxplot" command: add --factorized and --panel options; also
  enhance the boxplot options available via the GUI
- "arima" command (native exact ML variant): add a --hessian option to
  enforce computation of standard errors using the Hessian; if this
  option is not given, allow use of OPG as fallback if the numerical
  Hessian cannot be computed